--- a/22-django/ProjectoDjango/mainapp/templates/layouts/layout.html
+++ b/22-django/ProjectoDjango/mainapp/templates/layouts/layout.html
@@ -21,19 +21,18 @@
             <h1>Sitio web con Django </h1>
         </div>
     </header>
-   
     <nav>
         <ul>
             <li>
                 <a href="{% url 'index' %}">Inicio</a>
             </li>
-            <li>
-                <a href="{% url 'about' %}">Sobre nosotros</a>
-            </li>
+            {% for page in pages %}
+                <li>
+                    <a href="{% url 'page' page.2 %}">{{page.1}}</a>
+                </li>
+            {% endfor %}
         </ul>
-
     </nav>
-
     <div class="barra">
         <span class="esquina-izquierda"></span>
         <span class="relleno-barra"></span>
